# LatexAutoTable

./: README.md  elements.py  pyproject.toml  table.py
AutoTable/: elements.py
test/: test_elements.py
