[tool.poetry]
name = "latexautotable"
version = "0.1.0"
description = ""
authors = ["voetberg <magpie127@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
