[tool.poetry]
name = "AutoTable"
version = "0.1.0"
description = ""
authors = ["voetberg <magpie127@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
